# LoopScheduler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  paper.bib  paper.md
Lab/: condition_variable_wait.cpp  exception_in_constructor.cpp  increment_guard.cpp  map_access.cpp  ptr_variant_map.cpp  thread_join.cpp  virtual_destructor.cpp
LoopScheduler/: BiasedEMATimeSpanPredictor.cpp  BiasedEMATimeSpanPredictor.h  CMakeLists.txt  Group.cpp  Group.h  GroupMember.cpp  GroupMember.h  Loop.cpp  Loop.h  LoopScheduler.dec.h  LoopScheduler.h  Module.cpp  Module.h  ModuleHoldingGroup.cpp  ModuleHoldingGroup.h  ParallelGroup.cpp  ParallelGroup.h  ParallelGroupMember.cpp  ParallelGroupMember.h  SequentialGroup.cpp  SequentialGroup.h  SmartCVWaiter.cpp  SmartCVWaiter.h  SmartWaiter.cpp  SmartWaiter.h  TimeSpanPredictor.h
Tests/: CMakeLists.txt  combined_test.cpp  parallel_evaluation.cpp  parallel_progressive_test.cpp  parallel_test.cpp  sequential_evaluation.cpp  sequential_progressive_test.cpp  sequential_test.cpp
Tests/Results/: extract-results.py  plot-evaluation-results.py  plot-progressive-results.py
Tests/Results/combined_test/: test1-example  test1-example-figure-position-calculator.py
Tests/Results/parallel_evaluation/: test-1-quick  test-1-slow.txt  test-2.txt  test-4-fast  test-4-slow  test-8-fast  test-8-fast.txt  test-8-slow  test-80-0  test-80-1  test-80-1-slow.txt
Tests/Results/parallel_progressive_test/: test-1-slow  test-2  test-4  test-80-0  test-80-1  test1  test2
Tests/Results/parallel_test/: results  test1-raw  test2-raw  test3-raw  test4-raw  test5-raw
Tests/Results/sequential_evaluation/: test-1-2  test-4-2
Tests/Results/sequential_progressive_test/: test1  test2  test3  test4  test5  test6
Tests/Results/sequential_test/: results  test1-raw  test2-raw  test3-raw
Tests/combined_test_inputs/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
